cmake_minimum_required(VERSION 3.11)

find_package(Threads REQUIRED)
file(GLOB_RECURSE SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*.*)
add_library(NRT.CFX SHARED ${SOURCE})
target_enable_ipo(NRT.CFX)
target_compile_definitions(NRT.CFX PRIVATE -DNRTCORE_BUILD)
target_include_directories(NRT.CFX PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include)
target_include_directories(NRT.CFX INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/Include)
target_link_libraries(NRT.CFX PRIVATE Threads::Threads)
target_link_libraries(NRT.CFX PUBLIC NRT.CRT)
