cmake_minimum_required(VERSION 3.11)

find_package(Threads REQUIRED)
file(GLOB_RECURSE SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*.*)
add_library(NRT.Core SHARED ${SOURCE})
target_enable_ipo(NRT.Core)
target_compile_definitions(NRT.Core PRIVATE -DNRTCORE_BUILD)
target_include_directories(NRT.Core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include)
target_include_directories(NRT.Core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/Include)
target_link_libraries(NRT.Core PRIVATE Threads::Threads)
